table details reworked