@@ -3,16 +3,17 @@ package app;
 import java.util.LinkedList;
 import java.util.List;
 import java.util.Map;
+import java.util.stream.Collectors;
 
 public class SortOptions {
 
     private final ConsolePrinter consolePrinter;
     private final InputCollector inputCollector;
-    private final Map<String, String> tableDetails;
+    private final LinkedList<TableDetails> tableDetails;
     private final String tableName;
 
 
-    public SortOptions(ConsolePrinter consolePrinter, InputCollector inputCollector, Map<String, String> tableDetails, String tableName) {
+    public SortOptions(ConsolePrinter consolePrinter, InputCollector inputCollector, LinkedList<TableDetails> tableDetails, String tableName) {
         this.consolePrinter = consolePrinter;
         this.inputCollector = inputCollector;
         this.tableDetails = tableDetails;
@@ -20,7 +21,7 @@ public class SortOptions {
     }
 
     Sort load(String sortyBy, boolean isDescending) {
-        List<String> strings = tableDetails.keySet().stream().toList();
+        List<String> strings = tableDetails.stream().map(TableDetails::getTableName).collect(Collectors.toList());
         LinkedList<String> strings1 = new LinkedList<>();
         for (int i = 0; i < strings.size(); i++) {
             strings1.add(i + 1 + " " + strings.get(i));
